<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:text="@string/button"
                android:background="@color/blue"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@drawable/bg1"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"

                />
            <TextView
                android:id="@+id/sltotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@drawable/bg2"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"

                />
            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg3"
                android:layout_marginRight="8dp">

                <TextView
                    android:id="@+id/reclable1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/white"

                    />
                <TextView
                    android:id="@+id/recovered"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/reclable1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/white"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg4">
                <TextView
                    android:id="@+id/deathlable1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textSize="12sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/white"

                    />
                <TextView
                    android:id="@+id/deaths"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/deathlable1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@android:color/white"
                    />
            </RelativeLayout>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleW"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@color/red1"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"

                />
            <TextView
                android:id="@+id/Wtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@color/orange1"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Worldnewcases"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"

                />
            <TextView
                android:id="@+id/Wactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@color/green1"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"

                />
            <TextView
                android:id="@+id/Wrecovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@color/red2"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deaths"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"

                />
            <TextView
                android:id="@+id/Wdeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resourcetext"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="10sp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyrighttextMain"
                android:layout_marginTop="9dp"
                android:textColor="@android:color/black"
                android:textSize="7sp"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>